# lambad

./: .ghci  README.md  lambad.cabal
examples/: prelude.js  prelude.pure  prelude.systemf
scrap/: DeBruijn.hs
src/Blambda/: Bound.hs
src/Blambda/DeBruin/: Pretty.hs  Syntax.hs
src/Lambad/: Eval.hs  Misc.hs  Pretty.hs
src/Lambad/DeBruijn/: Compile.hs  Eval.hs  Syntax.hs
src/Lambad/Machines/: CEK.hs  CEKGo.hs
src/Lambad/Pure/: Eval.hs  Parser.hs  Repl.hs  Syntax.hs
src/Lambad/Pure/Compilers/: CPS.hs  JavaScript.hs
src/Lambad/Pure/Machines/: CEK.hs  CEKGo.hs
src/Lambad/SystemF/: Eval.hs  Parser.hs  Repl.hs  Substitute.hs  Syntax.hs
src/Language/Lambad/: Eval.hs  Misc.hs  Parser.hs  Pretty.hs  Syntax.hs
src/Language/Pure/: Eval.hs  Misc.hs  Parser.hs  Pretty.hs  Repl.hs  Syntax.hs
